--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
     <title>hello ....</title>
 </head>
 <body>
-<h1>not a easy beagining</h1>>
+<h1>not a easy beagining not bad</h1>>
 </body>
 </html>
